--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
    <link rel="stylesheet" href="Front.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
   </head>
-  <body style="background-color: #DAC0A3">
+  <body style="  background-image: linear-gradient(to right,#C6EA8D , #FE90AF);">
 
-    <audio controls autoplay style="visibility: hidden;">
-        <source src="Happy Birthday ! Happy Birthday Song ! Happy Birthday.mp3" type="audio/ogg">
+   <video controls autoplay style="height: 400px; width: 400px;" >
 
-      </audio>
+      <source src="BROTHER-Happy-Birthday-Song-–-Happy-Birthday-to-You720P_HD.mp4" type="audio/ogg" >   
+
+    </video>
 
       
 
