--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
    <video controls autoplay style="height: 400px; width: 400px;" >
 
-      <source src="BROTHER-Happy-Birthday-Song-–-Happy-Birthday-to-You720P_HD.mp4" type="audio/ogg" >   
+      <source src="BROTHER-Happy-Birthday-Song-–-Happy-Birthday-to-You720P_HD.mp4" type="video/ogg" >   
 
     </video>
 
