--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
   </head>
   <body style="  background-image: linear-gradient(to right,#C6EA8D , #FE90AF);">
 
-   <video controls autoplay style="height: 400px; width: 400px;" >
-
-      <source src="BROTHER-Happy-Birthday-Song-–-Happy-Birthday-to-You720P_HD.mp4" type="video/ogg" >   
-
-    </video>
-
+  
+<audio controls >
+      <source src="Happy Birthday ! Happy Birthday Song ! Happy Birthday.mp3" type="audio/ogg">
+    
+    </audio>
       
 
       <div class="card" style="width: 400;   color:#E55604 ">
